# simple-llm-query

./: Cargo.toml  README.md
src/: main.rs
